force-app/main/default/objects/Dealer_Order__c/Dealer_Order__c.object-meta.xml
<CustomObject>
    <label>Dealer Order</label>
    <nameField>
        <displayFormat>DealerOrder-{0000}</displayFormat>
        <label>Dealer Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>