force-app/main/default/objects/Dealer_Order__c/fields/Financing_Company__c.field-meta.xml
<CustomField>
    <fullName>Financing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financing Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Financing_Company__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Financing_Company__c</referenceTo>
    <relationshipLabel>Dealer Orders</relationshipLabel>
    <relationshipName>Dealer_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>