force-app/main/default/objects/Dealer_Order__c/fields/Financing_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Financing_Company_Name__c</fullName>
    <formula>Financing_Company__r.Financing_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financing Company Name</label>
    <type>Text</type>
</CustomField>