force-app/main/default/objects/Dealer_Order__c/fields/isLocked__c.field-meta.xml
<CustomField>
    <fullName>isLocked__c</fullName>
    <formula>OR( ISPICKVAL( Stage__c , &#39;Approved&#39;), ISPICKVAL( Stage__c, &#39;Processed&#39; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLocked</label>
    <type>Checkbox</type>
</CustomField>