force-app/main/default/objects/Dealer_Order__c/fields/LineItemCount__c.field-meta.xml
<CustomField>
    <fullName>LineItemCount__c</fullName>
    <label>LineItemCount</label>
    <summaryForeignKey>Dealer_Order_Line__c.Dealer_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>