force-app/main/default/objects/Dealer_Order__c/fields/Merc_Order_Sent__c.field-meta.xml
<CustomField>
    <fullName>Merc_Order_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merc Order Sent</label>
    <type>Checkbox</type>
</CustomField>