force-app/main/default/objects/Dealer_Order__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <label>Model Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>