force-app/main/default/objects/Dealer_Order__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <label>Order Total</label>
    <summarizedField>Dealer_Order_Line__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Dealer_Order_Line__c.Dealer_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>