force-app/main/default/objects/Dealer_Order__c/fields/Order_Total_No_Fees_And_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Order_Total_No_Fees_And_Discounts__c</fullName>
    <label>Order Total NO Fees And Discounts</label>
    <summarizedField>Dealer_Order_Line__c.Line_Total_No_Fees_or_Discounts__c</summarizedField>
    <summaryForeignKey>Dealer_Order_Line__c.Dealer_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>