force-app/main/default/objects/Dealer_Order__c/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Dealer Orders</relationshipLabel>
    <relationshipName>Dealer_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>