force-app/main/default/objects/Dealer_Order__c/fields/Program_Year__c.field-meta.xml
<CustomField>
    <fullName>Program_Year__c</fullName>
    <label>Program Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>