force-app/main/default/objects/Dealer_Order__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Pending Financing</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Filled</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
                <isActive>false</isActive>
                <label>Processed</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
                <isActive>false</isActive>
                <label>Reviewed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>