force-app/main/default/objects/Dealer_Order__c/listViews/All_Boat_Orders.listView-meta.xml
<ListView>
    <fullName>All_Boat_Orders</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order_Number__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Boat Orders</label>
    <sharedTo>
        <portalRole>HahnDevCoPartnerUser</portalRole>
    </sharedTo>
</ListView>