force-app/main/default/objects/Dealer_Order__c/listViews/Marianne_s_Dealer_View.listView-meta.xml
<ListView>
    <fullName>Marianne_s_Dealer_View</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Order_Total__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_Booking_Order__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>Marianne&#39;s Dealer View</label>
    <language>en_US</language>
</ListView>