force-app/main/default/objects/Dealer_Order__c/listViews/Melanie_s_View.listView-meta.xml
<ListView>
    <fullName>Melanie_s_View</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_Booking_Order__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>Melanie&#39;s View</label>
    <language>en_US</language>
</ListView>