force-app/main/default/objects/Dealer_Order__c/listViews/X2018_Partner_Boat_Orders.listView-meta.xml
<ListView>
    <fullName>X2018_Partner_Boat_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_Booking_Order__c</columns>
    <columns>Order_Total__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/14/2017 12:00 AM</value>
    </filters>
    <label>2018 Partner Boat Orders</label>
</ListView>